# roadtrip-planner

./: .flake8  .gitignore  Carte.py  README.md  app.py  core.py  get_Long_Lat.py  main.py  pyproject.toml  test_api_osrm.py
.github/workflows/: ci.yml
data/: Hebergements_exemples.csv  hebergements_chemins.parquet
pages/: Afficher Carte.py  Liste des nuits.py
tests/: conftest.py  test_app.py  test_imports.py  test_structure.py
utils/: core.py  creer_carte.py  get_route.py
