[project]
name = "road-trip"
version = "1.2"
description = "Road Trip Planner"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "folium~=0.19",
    "opencage~=3.1",
    "pandas~=2.2",
    "polyline~=2.0",
    "pygithub~=2.6",
    "requests~=2.32",
    "streamlit~=1.44",
    "streamlit-folium~=0.25",
    "streamlit-pdf-viewer>=0.0.22",
]

[project.optional-dependencies]

dev = [
    "black~=24.3",
    "isort~=5.13",
    "flake8~=7.0",
    "pytest~=8.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]