[project]
name = "road-trip"
version = "1.2"
description = "Road Trip Planner"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "folium~=0.19",
    "opencage~=3.1",
    "pandas~=2.2",
    "polyline~=2.0",
    "pygithub~=2.6",
    "requests~=2.32",
    "streamlit~=1.44",
    "streamlit-folium~=0.25",
    "streamlit-pdf-viewer>=0.0.22",
]

[dependency-groups]

dev = [
    "black~=25.1",
    "isort~=6.0",
    "flake8~=7.2",
    "pytest~=8.3.5",
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
  \.git
  | \.venv
  | __pycache__
  | venv
  | env
  | \.eggs
  | .*\.egg
  | build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [".venv/*", "__pycache__/*", "*.egg", "*.egg-info/*", "build/*", "dist/*"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"


