[project]
name = "road-trip"
version = "1.2"
description = "Road Trip Planner"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "folium~=0.19.7",
    "opencage~=3.2",
    "pandas~=2.3",
    "polyline~=2.0",
    "pygithub~=2.6",
    "requests~=2.32.4",
    "streamlit~=1.45",
    "streamlit-folium~=0.25",
    "streamlit-pdf-viewer>=0.0.24",
]

[dependency-groups]

dev = [
    "black~=25.1",
    "isort~=6.0",
    "pytest~=8.4",
]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
(
  \.git
  | \.venv
  | __pycache__
  | venv
  | env
  | \.eggs
  | .*\.egg
  | build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [".venv/*", "__pycache__/*", "*.egg", "*.egg-info/*", "build/*", "dist/*"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"


